Wed Dec 19 17:15:56 2001  Gary Wong  <gtw@research.att.com>

	* gtkgame.c (GTKDoubleHint, GTKTakeHint): New functions.
	* gnubg.c (CommandHint): Use GTK functions for cube hints.

Mon Dec 17 14:01:07 2001  Gary Wong  <gtw@research.att.com>

	* rollout.c (BasicCubefulRollout, RolloutGeneral): Don't compute or
	show statistics if aarsStatistics is NULL.
	(printRolloutstat): Pacify compiler warnings.
	
Sun Dec 16 16:49:38 2001  Joern Thyssen  <jthyssen@dk.ibm.com>

	* eval.c (FindBestCubeDecision): fix logic. Old logic would return "too
	good, take" for position ID 2M7EAGism4MDIA in money game without
	Jacoby.  

Sun Dec 16 12:45:04 2001  Joern Thyssen  <jthyssen@dk.ibm.com>

	* rollout.c (printRolloutstat, initRolloutstat): new functions:
	dump rollout statistics and initialise statistics, respectively. 

	* rollout.c (getCubeTurns): calculate log ( nCube ) / log ( 2 )

	* rollout.c: pass rollout statistics to all rollout functions, and
	change all callers.

	* rollout.c (BasicCubefulRollout): gather statistics.

	* rollout.c (GeneralRollout): initialise and dump rollout
	statistics.

	* rollout.c (BasicCubefulRollout): fix bug for match play cubeful
	rollouts reported by Robert-Jan Veldhuizen (missing conversion to
	mwc).

	* gtkgame.c (GTKRolloutUpdate): new parameter: cubeinfo
	struct. The functions now honours the fOutputMWC flag.

Thu Dec 13 15:30:45 2001  Gary Wong  <gtw@research.att.com>

	* import.c (ParseSGGGame): New function.  Parse an SGG "Game ..."
	header (to fix import bug reported by Maik Stiebler and Peter
	Sochovsky).
	
Mon Dec 10 21:49:00 2001  Joern Thyssen  <jth@chem.sdu.dk>

	* analysis.c: bug fix for wrong values of equity loss for wrong takes and
	wrong passes; change rCost to rSkill (bug reported by by Robert-Jan
	Veldhuizen).

Mon Dec 10 10:41:45 2001  Gary Wong  <gtw@research.att.com>

	* drawboard.c (FIBSBoard): Cope if player names contain `:' characters.

	* database.c (CommandDatabaseRollout): Use rcRollout.
